Adding my progress for 16 of August

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -549,7 +549,18 @@
       <p>Fixing the bugs when I added multiple row</p>
       <h1>12 of August</h1>
       <p>fixed the opening automatically when the use click the date</p>
+
+      <h1>16 of August</h1>
+      <p>
+        - Added new X icon and added some functionality to update the data
+        fields
+      </p>
+      <p>
+        Fixing the discard when the user click no then they have to go back to
+        the current preset
+      </p>
     </li>
+
     <li>
       3) UI redesigned.
       <h1>10 of August</h1>
@@ -561,6 +572,9 @@
         Fixing the height so to let the user to see the cancel and ok when they
         want to confirm the date
       </p>
+      <h1>16 of August</h1>
+      <p>- Making the text inside of input field to be in line</p>
+      <p>- Fixing the incon to be the same position</p>
     </li>
     <li>
       4) Working on progress
