Coomented some code

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -228,9 +228,9 @@ select {
       }
     }
   }
-  ion-icon {
-    // margin-right: 1rem;
-  }
+  // ion-icon {
+  //   // margin-right: 1rem;
+  // }
 }
 
 .modi-btn{
