Fixing styles (17 of August)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -90,7 +90,7 @@
         <ion-infinite-scroll threshold="100px">
           <ion-grid
             class="form-wrapper"
-            style="overflow: overlay; height: 77vh"
+            style="overflow: overlay; height: 77vh; padding-top: 0.5rem"
           >
             <form class="" [formGroup]="searchFilterForm">
               <div formArrayName="search">
