Fixing style (17 of August)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -88,10 +88,7 @@
           </div>
         </div>
         <ion-infinite-scroll threshold="100px">
-          <ion-grid
-            class="form-wrapper"
-            style="overflow: overlay; height: 77vh; padding-top: 0.5rem"
-          >
+          <ion-grid class="form-wrapper">
             <form class="" [formGroup]="searchFilterForm">
               <div formArrayName="search">
                 <ion-grid
