Fixing styles (17 of august)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -188,7 +188,13 @@
                         </ion-col>
                       </div>
                     </div>
-                    <ion-col size-lg="3" size-md="4" size-sm="4" size-xl="2">
+                    <ion-col
+                      size-lg="3"
+                      size-md=""
+                      size-sm=""
+                      size-xl="2"
+                      size-xs="12"
+                    >
                       <select
                         class="select-class"
                         formControlName="param1"
@@ -207,7 +213,13 @@
                         </option>
                       </select>
                     </ion-col>
-                    <ion-col size-lg="3" size-md="4" size-sm="3" size-xl="2">
+                    <ion-col
+                      size-lg="3"
+                      size-md=""
+                      size-sm=""
+                      size-xl="2"
+                      size-xs="12"
+                    >
                       <select
                         class="select-class disableSelect"
                         formControlName="param2"
