added my progress (18 of August)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -518,6 +518,8 @@
       </p>
       <h1>11 of August</h1>
       <p>- Adding placeholder to the date</p>
+      <h1>18 of August</h1>
+      <p>Adding post to request from the server</p>
     </li>
     <li>
       2) Bugs fixed :
@@ -569,6 +571,8 @@
         Fixing the discard when the user click no then they have to go back to
         the current preset
       </p>
+      <h1>18 of August</h1>
+      <p>Fixing the date with exactly... and between</p>
     </li>
 
     <li>
