--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -353,10 +353,11 @@
               </div>
             </form>
             <ion-item>
+              <!-- || this.allSearch() -->
               <ion-row class="btn-group">
                 <ion-col size-xs="12" size-sm="12" class="apply-filter">
                   <ion-button
-                    [disabled]="this.currentPresetName === ''? true : false"
+                    [disabled]="this.currentPresetName === ''|| this.allSearch().value[0].param1 === '' ? true : false"
                     (click)="applyFilter()"
                     class="apply-btn"
                     [tooltip]="'search filter'"
