Adding my progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -562,6 +562,13 @@
       </p>
       <h1>18 of August</h1>
       <p>Fixing the date with exactly... and between</p>
+      <h1>19 of August</h1>
+      <p>
+        Fixing the date : user click between then fill both field then click the
+        exactly or others then save it. when the user click the preset name then
+        confirmation of discar pops up which id not right.
+      </p>
+      <p>add condition to not allow user to click "search" button</p>
     </li>
 
     <li>
@@ -583,6 +590,12 @@
       4) Working on progress
       <h1>12 of August</h1>
       <p>working with the discard</p>
+    </li>
+    <li>
+      5) Optimisation :
+      <h1>19 of August</h1>
+      <p>Refactor the save function to avoid repeated</p>
+      <p>Creat variable on scss</p>
     </li>
   </div>
 </ion-content>
