Adding my progress and removing the import which is not needed (22 of August)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -568,6 +568,12 @@
         confirmation of discar pops up which id not right.
       </p>
       <p>add condition to not allow user to click "search" button</p>
+      <h1>22 of August</h1>
+      <p>
+        Adding confirmation if there is an empty input while the user tempted to
+        click the "search" and when user forget to fill the fourth field when
+        the click between
+      </p>
     </li>
 
     <li>
