--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,9 @@
-<ion-content [fullscreen]="true" class="content">
+<ion-content
+  [fullscreen]="true"
+  class="content"
+  [scrollEvents]="true"
+  (ionScroll)="ionScrolling()"
+  >>
   <ion-accordion-group class="accordion-grp">
     <ion-accordion value="colors" class="accordion">
       <ion-item slot="header">
@@ -52,7 +57,8 @@
               </ion-button>
               <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li class="dropdown-item" (click)="open(content)">
-                  Save As New Preset
+                  Save As New Preset Good morning, I have deployed my app. You
+                  can see all of the changes.
                 </li>
                 <li
                   class="dropdown-item"
@@ -87,7 +93,7 @@
             </div>
           </div>
         </div>
-        <ion-infinite-scroll threshold="100px">
+        <ion-infinite-scroll threshold="100px" (ionScroll)="ionScrolling()">
           <ion-grid class="form-wrapper">
             <form class="" [formGroup]="searchFilterForm">
               <div formArrayName="search">
