--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -57,8 +57,7 @@
               </ion-button>
               <ul class="dropdown-menu" aria-labelledby="dropdown">
                 <li class="dropdown-item" (click)="open(content)">
-                  Save As New Preset Good morning, I have deployed my app. You
-                  can see all of the changes.
+                  Save As New Preset
                 </li>
                 <li
                   class="dropdown-item"
