--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,8 +3,9 @@
   class="content"
   [scrollEvents]="true"
   (ionScroll)="ionScrolling()"
-  >>
+>
   <ion-accordion-group class="accordion-grp">
+    <!-- (mousedown)="selectMouseDown($event)" -->
     <ion-accordion value="colors" class="accordion">
       <ion-item slot="header">
         <ion-label class="accordion-label" [tooltip]="'search presets'"
@@ -14,7 +15,7 @@
       <ion-list slot="content" class="list">
         <div
           *ngIf="preSelectList.length > 0 else emptyList"
-          class="search-row search-row-select"
+          class="search-row sefarch-row-select"
         >
           <div class="select-search">
             <span class="span-presets">Presets :</span>
@@ -200,23 +201,23 @@
                       size-xl="2"
                       size-xs="12"
                     >
-                      <select
+                      <ion-select
                         class="select-class"
                         formControlName="param1"
                         [ngClass]="(!allSearch().controls[i].get('param1').valid && submitted) ? 'error' : ''"
-                        (change)="onParam1Change(i)"
+                        (ionChange)="onParam1Change(i)"
                       >
-                        <option disabled selected value>
+                        <ion-select-option disabled selected value>
                           select an option
-                        </option>
-                        <option
+                        </ion-select-option>
+                        <ion-select-option
                           class="select-options"
                           [value]="param1?.id"
                           *ngFor="let param1 of searchData; let i= index"
                         >
                           {{param1?.name}}
-                        </option>
-                      </select>
+                        </ion-select-option>
+                      </ion-select>
                     </ion-col>
                     <ion-col
                       size-lg="3"
@@ -225,21 +226,20 @@
                       size-xl="2"
                       size-xs="12"
                     >
-                      <select
+                      <ion-select
                         class="select-class disableSelect"
                         formControlName="param2"
-                        onselect=""
-                        (change)="onParam2Change(i,true)"
+                        (ionChange)="onParam2Change(i,true)"
                         [ngClass]="!allSearch().controls[i].get('param2')?.valid && submitted ? 'error' : ''"
                       >
-                        <option
+                        <ion-select-option
                           class="select-options"
                           [value]="p2.id"
                           *ngFor="let p2  of param2List[i];"
                         >
-                          {{p2.name}}
-                        </option>
-                      </select>
+                          {{p2?.name}}
+                        </ion-select-option>
+                      </ion-select>
                     </ion-col>
                     <ion-col
                       size-xs="12"
@@ -268,6 +268,7 @@
                         <ion-input
                           onkeypress="return false;"
                           placeholder="Start Date"
+                          readonly
                           onkeydown="return false"
                           class="input-box range"
                           formControlName="param3"
@@ -275,8 +276,8 @@
                           [ngClass]="!allSearch().controls[i].get('param3')?.valid && submitted ? 'error' : ''"
                           *ngIf="allSearch().controls[i].get('param2')?.value === 'BETWEEN'"
                           (click)="this.datePickerInputOnClick('start',i, $event)"
-                          (mousedown)="$event.preventDefault()"
                         >
+                          <!-- (mousedown)="selectMouseDown($event)" -->
                         </ion-input>
                         <ion-datetime
                           #datetime
@@ -295,15 +296,16 @@
                         <ion-input
                           onkeypress="return false;"
                           onkeydown="return false"
+                          readonly
                           placeholder=" Pick Date"
                           class="input-box datepicker"
                           [value]="this.datePickersInfo[i]?.start?.formatedValue"
                           formControlName="param3"
-                          (mousedown)="$event.preventDefault()"
                           [ngClass]="!allSearch().controls[i].get('param3')?.valid && submitted ? 'error' : ''"
                           *ngIf="allSearch().controls[i]?.get('param2')?.value !== 'BETWEEN'"
                           (click)="this.datePickerInputOnClickNotBetween(i)"
                         >
+                          <!-- (mousedown)="selectMouseDown($event)" -->
                         </ion-input>
                       </ng-template>
                     </ion-col>
@@ -332,16 +334,17 @@
                       <ion-input
                         onkeypress="return false;"
                         placeholder="End Date"
+                        readonly
                         onkeydown="return false"
                         class="input-box range"
                         formControlName="param4"
-                        (mousedown)="$event.preventDefault()"
                         [value]="this.datePickersInfo[i]?.end?.formatedValue"
                         [ngClass]="!allSearch().controls[i].get('param4')?.valid && submitted ? 'error' : ''"
                         *ngIf="isDestinationNeeded(i)"
                         (click)="this.datePickerInputOnClick('end',i, $event)"
                         id="date-range-input"
                       >
+                        <!-- (mousedown)="selectMouseDown($event)" -->
                       </ion-input>
                       <ion-button
                         class="clear-param4"
