adding my progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -582,6 +582,11 @@
         click the "search" and when user forget to fill the fourth field when
         the click between
       </p>
+      <h1>24 of August</h1>
+      <p>
+        Fixing the opening keyboard and the first field while click other
+        things(ios)
+      </p>
     </li>
 
     <li>
