Adding my progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -605,7 +605,21 @@
       <h1>16 of August</h1>
       <p>- Making the text inside of input field to be in line</p>
       <p>- Fixing the incon to be the same position</p>
+      <h1>25 of August</h1>
+
+      <p>
+        Added interface popover for the desktop and stay as ion-select on ios
+        and android.
+      </p>
+      <p>
+        Making the size of ion-select and ion-select-option to be compatible(for
+        desktop).
+      </p>
+      <p>
+        Changed the color of the confirmation to be the same as popover's color.
+      </p>
     </li>
+
     <li>
       4) Working on progress
       <h1>12 of August</h1>
