Fixing stile and add condition on tablet

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -14,7 +14,7 @@
       <ion-list slot="content" class="list">
         <div
           *ngIf="preSelectList.length > 0 else emptyList"
-          class="search-row sefarch-row-select"
+          class="search-row search-row-select"
         >
           <div class="select-search">
             <span class="span-presets">Presets :</span>
