adding my progress for 26 of August

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -618,6 +618,10 @@
       <p>
         Changed the color of the confirmation to be the same as popover's color.
       </p>
+      <h1>26 of August</h1>
+      <p>
+        Fixing styles of ion-select-option on ios and making the line matches
+      </p>
     </li>
 
     <li>
