Adding my progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -639,6 +639,8 @@
         Fixing the opening keyboard and the first field while click other
         things(ios)
       </p>
+      <h1>30 of August</h1>
+      <p>Fixing the date between and not between</p>
     </li>
 
     <li>
@@ -686,6 +688,10 @@
       <p>Creat variable on scss</p>
       <h1>29 of August</h1>
       <p>Try to add modal for mobile but not working yet</p>
+      <h1>30 th of August</h1>
+      <p>
+        Adding ion-modal for the mobile and tablet and stay as it is on desktop
+      </p>
     </li>
   </div>
 </ion-content>
