Add my progess for 31 of August

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -568,6 +568,11 @@
       <p>- Adding placeholder to the date</p>
       <h1>18 of August</h1>
       <p>Adding post to request from the server</p>
+      <h1>31 of August</h1>
+      <p>
+        Add new confirmation when the user forget to fill the field ( for
+        update)
+      </p>
     </li>
     <li>
       2) Bugs fixed :
@@ -642,6 +647,14 @@
       <h1>30 of August</h1>
       <p>Fixing the date between and not between</p>
     </li>
+    <h1>31 of August</h1>
+    <p>
+      Fixing the first item of preset name to be update when user adds changes
+    </p>
+    <p>
+      Fixing the update to allow the user to see the confiramtions while the add
+      changes
+    </p>
 
     <li>
       3) UI redesigned.
