--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -171,14 +171,14 @@ form {
     padding: 0;
   }
 }
-select::-ms-expand {
-  display: none;
-}
-select {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-    padding-left: 0.5rem;
-}
+// select::-ms-expand {
+//   display: none;
+// }
+// select {
+//   -moz-appearance: none;
+//   -webkit-appearance: none;
+//     padding-left: 0.5rem;
+// }
 .select-item select {
   -moz-appearance: none;
   -webkit-appearance: none;
@@ -333,9 +333,9 @@ ion-item:not(.item-label) .sc-ion-input-md-h,ion-item:not(.item-label) .sc-ion-i
      padding-top: 0.5rem
 }
 
-.abc {
-  width: 100%;
-}
+// .abc {
+//   width: 100%;
+// }
 .example-box {
   display: flex;
   align-items: center;
@@ -355,32 +355,6 @@ ion-item:not(.item-label) .sc-ion-input-md-h,ion-item:not(.item-label) .sc-ion-i
   width: 100%;
   border: none !important;
 }
-.selectbtn{
-  background-color:#008000;
-  color:#ffffff;
-  padding: 0.5rem 0.7rem;
-  border-radius:4px;
-  font-size: 14px;
-}
-
-.cdk-drag-preview {
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14),
-    0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
-
-.cdk-drag-placeholder {
-  background-color: rgba(0, 0, 0, 0.6) !important;
-  opacity: 0;
-  cursor: grabbing;
-}
-
-.cdk-drag-animating {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
 .example-box {
   cursor: grab;
 }
@@ -422,7 +396,6 @@ label {
   margin-bottom: 2rem;
   margin-top: 0px !important;
   color: white !important;
-  // background: black;
   height: 5vh;
 }
 
@@ -438,35 +411,11 @@ label {
   height: 5vh;
 }
 
-.mat-form ::ng-deep .mat-calendar-body-cell-container {
-  background-color: pink !important;
-  width: 100px !important;
-  height: 100px !important;
-}
-
-.range-picker ::ng-deep .mat-calendar-body-cell-container {
-  background-color: rgb(192, 255, 219) !important;
-  width: 100px !important;
-  height: 100px !important;
-}
-
-.date-input {
-  background: #000;
-}
-
 .toggle ::ng-deep .mat-calendar-body-cell-container {
   background-color: rgb(214, 18, 51) !important;
   width: 100px !important;
   height: 100px !important;
 }
-
-::ng-deep.easepick-wrapper {
-  .container {
-    background-color: red
-  }
-}
-
-
 
 ul li ul {
   display: none; /* Hide the nested list first */
